# generic-FastAPI-framework

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.sh  update_path.py
app/: main.py
app/api/dependencies/: base_deps.py
app/api/middleware/: error_handler.py  logging_middleware.py
app/api/v1/: main_router.py
app/api/v1/routers/: foo_router.py  health_router.py  task_router.py
app/application/config/: core_config.yaml  service_config.yaml  settings.py
app/application/handlers/: base_handler.py  foo_handler.py  health_handler.py  task_handler.py
app/application/handlers/system/: health_handler.py  task_handler.py
app/application/services/: base_service.py  foo_service.py  health_service.py  service_interface.py  task_service.py
app/application/services/system/: __init__.py  health_service.py  task_service.py
app/domain/exceptions/: base_exception.py  domain_exception.py  validation_excetion.py
app/domain/repositories/: repository_interface.py
app/infrastructure/cache/: cache_interface.py  task_result_cache.py
app/infrastructure/decorators/: cache.py  rate_limit.py  retry.py
app/infrastructure/external_services/: s3_service.py
app/infrastructure/logging/: logger.py
app/infrastructure/messaging/: messaging_interface.py
app/infrastructure/tasks/: __init__.py  base_task.py  callback_manager.py  generic_task.py  request_task.py  result_storage.py  task_decorator.py  task_manager.py  task_registry.py  worker_pool.py
app/infrastructure/tasks/storage/: __init__.py  memory_store.py  s3_store.py  task_storage.py
app/infrastructure/utils/: datetime_utils.py  dict_utils.py  file_utils.py  response_utils.py  string_utils.py  validation_utils.py
app/schemas/: base_schema.py
app/schemas/dtos/request/: base_request.py  task_request.py
app/schemas/dtos/response/: health_response.py  task_response.py
app/schemas/enums/: base_enums.py
src/: main.py
src/api/dependencies/: base_deps.py
src/api/middleware/: error_handler.py  logging_middleware.py
src/api/routers/: main_router.py
src/api/v1/: main_router.py
src/api/v1/routers/: foo_router.py
src/application/config/: settings.py
src/application/config/system/: core_config.yaml
src/application/handlers/: foo_handler.py  handler_interface.py
src/application/handlers/system/: health_handler.py  task_handler.py
src/application/services/: foo_service.py  service_interface.py
src/application/services/system/: __init__.py  health_service.py  task_service.py
src/domain/exceptions/: base_exception.py  domain_exception.py  validation_excetion.py
src/domain/repositories/: repository_interface.py
src/infrastructure/cache/: cache_interface.py
src/infrastructure/decorators/: README.md  cache.py  rate_limit.py  retry.py
src/infrastructure/external_services/: s3_service.py
src/infrastructure/logging/: logger.py  logger.py.bck
src/infrastructure/messaging/: messaging_interface.py
src/infrastructure/tasks/: base_task.py  callback_manager.py  request_task.py  task_decorator.py  task_manager.py  task_registry.py  worker_pool.py
src/infrastructure/tasks/storage/: __init__.py  memory_store.py  s3_store.py  task_storage.py
src/infrastructure/utils/: datetime_utils.py  dict_utils.py  file_utils.py  response_utils.py  string_utils.py  validation_utils.py
src/schemas/: base_schema.py
src/schemas/dtos/request/: base_request.py  task_request.py
src/schemas/dtos/response/: base_response.py  task_response.py
src/schemas/enums/: base_enums.py
tests/: README.md  conftest.py  simple_validation.py  stress_test.py  test_async_task.py  test_decorators.py  test_foo.py  test_foo_light.py  test_simple.py  test_worker_debug.py
(+4 files in other folders)
